# personal-website

./: .dockerignore  .eslintrc.cjs  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  README.md  amplify.yml  bun.lockb  components.json  docker.sh  eslint.config.js  fly.toml  next.config.cjs  next.config.js  next.config.mjs  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  prettier.config.js  schema.json  script.ts  store.py  tailwind.config.ts  tsconfig.json  vercel.json  wrangler.toml
.github/workflows/: deploy.yml  docker-ci.yml  pages.yml  playwright.yml
amplify/: team-provider-info.json
amplify/.config/: project-config.json
amplify/backend/: backend-config.json
app/: admin.d.ts  data.ts  entry.server.tsx  root.tsx  session.server.ts  styles.css  utils.ts
app/components/: Contact.tsx  DownloadResume.tsx  Intro.tsx  Markdown.tsx  Projects.tsx  SectionTitle.tsx  TagList.tsx  UIHelpers.tsx
app/models/: about.server.ts  contact.server.ts  (+3 more)
components/: themeChecker.ts
game/: game.d.ts  game_bg.js  game_bg.wasm  game_bg.wasm.d.ts
pages/: _app.tsx  index.tsx
patches/: next-auth+4.23.1.patch
prisma/: schema.prisma
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: fpscounter.ts  game.ts  global.d.ts  noSsr.tsx  windowSize.ts
src/: FilterProvider.tsx  about.md  context.md  data.ts  globals.css  globals.d.ts  mdx-components.tsx  middleware.ts  rules.md
styles/: Home.module.css  globals.css  theme.ts
terraform/: .env.example  clear-secrets.sh  main.tf  manage.sh  network.tf  policy.tf  service.tf
tests/: index.spec.ts
(+357 files in other folders)
