[package]
name = "wasm_game_of_life"
version = "0.1.0"
authors = ["Justin Edwards <justinedwards1230@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.59"
wasm-bindgen = "0.2.63"
rand = "0.8.5"
getrandom = { version = "0.2.7", features = ["js"] }
fixedbitset = "0.4.2"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'CanvasRenderingContext2d',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]
